objects/FieloEE__Triggers__c.object
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <fields>
        <fullName>FieloEE__Member__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Member</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FieloEE__RedemptionItem__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Redemption Item</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FieloEE__Redemption__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Redemption</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FieloEE__Transaction__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Transaction</label>
        <type>Checkbox</type>
    </fields>
    <label>Triggers</label>
</CustomObject>